@@ -1,138 +1,130 @@
-
-
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Servlet.java to edit this template
- */
 package Controllers;
 
-import java.io.IOException;
-import java.io.PrintWriter;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import models.UserDAO;
+import java.io.IOException;
+import models.StudentDAO;
+import models.TeacherDAO;
+import models.AdminStaffDAO;
 
-import models.UserDAO;
-
-/**
- *
- * @author HP
- */
-// Huyền- Nhập mật khẩu mới
 public class ResetPasswordServlet extends HttpServlet {
 
-    /**
-     * Processes requests for both HTTP <code>GET</code> and <code>POST</code>
-     * methods.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
-    protected void processRequest(HttpServletRequest request, HttpServletResponse response)
-            throws ServletException, IOException {
-        response.setContentType("text/html;charset=UTF-8");
-        try (PrintWriter out = response.getWriter()) {
-            /* TODO output your page here. You may use following sample code. */
-            out.println("<!DOCTYPE html>");
-            out.println("<html>");
-            out.println("<head>");
-            out.println("<title>Servlet ResetPasswordServlet</title>");
-            out.println("</head>");
-            out.println("<body>");
-            out.println("<h1>Servlet ResetPasswordServlet at " + request.getContextPath() + "</h1>");
-            out.println("</body>");
-            out.println("</html>");
-        }
-    }
-
-    // <editor-fold defaultstate="collapsed" desc="HttpServlet methods. Click on the + sign on the left to edit the code.">
-    /**
-     * Handles the HTTP <code>GET</code> method.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        processRequest(request, response);
+        String phone = request.getParameter("phone");
+        String role = request.getParameter("role");
+
+        if (phone == null || phone.trim().isEmpty() || !phone.matches("^\\+?[0-9]{10,11}$")) {
+            request.setAttribute("message", "Số điện thoại không hợp lệ trong liên kết.");
+            request.getRequestDispatcher("forgot-password.jsp").forward(request, response);
+            return;
+        }
+        if (role == null || role.trim().isEmpty() || !role.matches("^(Student|Teacher|Admin_staff)$")) {
+            request.setAttribute("message", "Vai trò không hợp lệ trong liên kết.");
+            request.getRequestDispatcher("forgot-password.jsp").forward(request, response);
+            return;
+        }
+
+        System.out.println("doGet: phone=" + phone + ", role=" + role); // Logging
+        request.setAttribute("phone", phone);
+        request.setAttribute("role", role);
+        request.getRequestDispatcher("changePassword.jsp").forward(request, response);
     }
 
-    /**
-     * Handles the HTTP <code>POST</code> method.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         String phone = request.getParameter("phone");
-        String table = request.getParameter("table");
+        String role = request.getParameter("role");
         String newPassword = request.getParameter("newPassword");
         String confirmPassword = request.getParameter("confirmPassword");
-        String message = "";
 
-        if (newPassword.isBlank()) {
-            message += "Bạn phải mật khẩu và xác nhận mật khẩu.";
+        // Kiểm tra dữ liệu đầu vào
+        if (phone == null || phone.trim().isEmpty() || !phone.matches("^\\+?[0-9]{10,11}$")) {
+            request.setAttribute("message", "Số điện thoại không hợp lệ.");
             request.setAttribute("phone", phone);
-            request.setAttribute("table", table);
-            request.setAttribute("message", message);
+            request.setAttribute("role", role);
             request.getRequestDispatcher("changePassword.jsp").forward(request, response);
             return;
         }
-        if (confirmPassword.isBlank()) {
-            message += "Bạn phải điền mật khẩu và xác nhận mật khẩu.";
+        if (role == null || role.trim().isEmpty() || !role.matches("^(Student|Teacher|Admin_staff)$")) {
+            request.setAttribute("message", "Vai trò không hợp lệ.");
             request.setAttribute("phone", phone);
-            request.setAttribute("table", table);
-            request.setAttribute("message", message);
+            request.setAttribute("role", role);
             request.getRequestDispatcher("changePassword.jsp").forward(request, response);
             return;
         }
-        
-
-        if (newPassword.length() <= 6 || !newPassword.matches(".*[a-z]*")
-                || !newPassword.matches(".*[A-Z]*") || !newPassword.matches(".*\\d.*")|| !newPassword.matches(".*[^a-zA-Z0-9].*")) {
-            message += "Mật khẩu phải trên 6 kí tự,có ít nhất 1 chữ thường,1 chữ in hoa, 1 số và 1 ký hiệu đặc biệt";
+        if (newPassword == null || newPassword.trim().isEmpty()) {
+            request.setAttribute("message", "Mật khẩu mới không được để trống.");
             request.setAttribute("phone", phone);
-            request.setAttribute("table", table);
-            request.setAttribute("message", message);
+            request.setAttribute("role", role);
             request.getRequestDispatcher("changePassword.jsp").forward(request, response);
             return;
         }
-
+        if (confirmPassword == null || confirmPassword.trim().isEmpty()) {
+            request.setAttribute("message", "Mật khẩu nhập lại không được để trống.");
+            request.setAttribute("phone", phone);
+            request.setAttribute("role", role);
+            request.getRequestDispatcher("changePassword.jsp").forward(request, response);
+            return;
+        }
         if (!newPassword.equals(confirmPassword)) {
-            message += "Mật khẩu chưa khớp.Vui lòng nhập lại";
+            request.setAttribute("message", "Mật khẩu nhập lại không khớp với mật khẩu mới.");
             request.setAttribute("phone", phone);
-            request.setAttribute("table", table);
-            request.setAttribute("message", message);
+            request.setAttribute("role", role);
+            request.getRequestDispatcher("changePassword.jsp").forward(request, response);
+            return;
+        }
+         if (newPassword.length() <= 6 || !newPassword.matches(".*[a-z]*")
+                || !newPassword.matches(".*[A-Z]*") || !newPassword.matches(".*\\d.*") || !newPassword.matches(".*[^a-zA-Z0-9].*")) {
+            request.setAttribute("message", "Mật khẩu phải trên 6 kí tự,có ít nhất 1 chữ thường,1 chữ in hoa, 1 số và 1 ký hiệu đặc biệt");
+            request.setAttribute("phone", phone);
+            request.setAttribute("role", role);
             request.getRequestDispatcher("changePassword.jsp").forward(request, response);
             return;
         }
 
-        UserDAO dao = new UserDAO();
+        StudentDAO studentDAO = new StudentDAO();
+        TeacherDAO teacherDAO = new TeacherDAO();
+        AdminStaffDAO adminDAO = new AdminStaffDAO();
+
         try {
-            dao.updatePassword(table, phone, newPassword);
-            message += "Đổi mật khẩu thành công. Mời bạn đăng nhập.";
-            request.setAttribute("phone", phone);
-            request.setAttribute("table", table);
-            request.setAttribute("message", message);
-            request.getRequestDispatcher("login.jsp").forward(request, response);
+            System.out.println("doPost: Cập nhật mật khẩu cho phone=" + phone + ", role=" + role); // Logging
+            boolean updated = false;
+
+            switch (role) {
+                case "Student":
+                    updated = studentDAO.updatePassword(phone, newPassword);
+                    break;
+                case "Teacher":
+                    updated = teacherDAO.updatePassword(phone, newPassword);
+                    break;
+                case "Admin_staff":
+                    updated = adminDAO.updatePassword(phone, newPassword);
+                    break;
+                default:
+                    request.setAttribute("message", "Vai trò không hợp lệ: " + role);
+                    request.setAttribute("phone", phone);
+                    request.setAttribute("role", role);
+                    request.getRequestDispatcher("changePassword.jsp").forward(request, response);
+                    return;
+            }
+
+            if (updated) {
+                request.setAttribute("message", "Đổi mật khẩu thành công. Vui lòng đăng nhập lại.");
+            } else {
+                request.setAttribute("message", "Số điện thoại không tồn tại hoặc không thể cập nhật mật khẩu.");
+            }
         } catch (Exception e) {
             e.printStackTrace();
-            request.setAttribute("message", "Có lỗi xảy ra khi cập nhật mật khẩu: " + e.getMessage());
-
-            request.getRequestDispatcher("changePassword.jsp").forward(request, response);
+            request.setAttribute("message", "Lỗi hệ thống: " + e.getMessage());
         }
 
+        request.setAttribute("phone", phone);
+        request.setAttribute("role", role);
+        request.getRequestDispatcher("changePassword.jsp").forward(request, response);
     }
-
 }
